syntax = "proto3";

package gs.api;

option go_package = "hk4e/gs/api;api";

// GM 服务
service GM {
    rpc Cmd (CmdRequest) returns (CmdReply) {}
}

message CmdRequest {
    string func_name = 1;
    repeated string param_list = 2;
}

message CmdReply {
    int32 code = 1; // 0 表示成功
    string message = 2;
}
